--- a/Contact.html
+++ b/Contact.html
@@ -42,83 +42,64 @@
         </div>
     </nav>
     <!-- navbar end -->
-
-    <!-- Team guide start -->
-    <div class="Team">
+    <!-- contact form start -->
+    <div class="contact">
         <div class="container">
             <div class="row mb-4">
                 <div class="col text-center">
-                    <h2 class="section-title">Our Tour Guides</h2>
-                    <p class="section-subtitle">Meet our experienced and friendly guides</p>
+                    <h2 class="section-title">Contact Us</h2>
+                    <p class="section-subtitle">We’d love to hear from you</p>
                 </div>
             </div>
-
             <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="team-card text-center">
-                        <img src="./image/team1.jpeg" alt="Guide">
-                        <div class="team-content">
-                            <h5>Elon Musk</h5>
-                            <p class="role">Senior Tour Guide</p>
-                            <p>10+ years of experience in international tours.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-card text-center">
-                        <img src="./image/team2.jpg" alt="Guide">
-                        <div class="team-content">
-                            <h5>mark zuckerberg</h5>
-                            <p class="role">Travel Expert</p>
-                            <p>Specialist in luxury and family travel planning.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-card text-center">
-                        <img src="./image/team3.jpg" alt="Guide">
-                        <div class="team-content">
-                            <h5>bill gates</h5>
-                            <p class="role">Adventure Guide</p>
-                            <p>Expert in mountain, hiking, and adventure tours.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Team guide end -->
+                <div class="col-md-6">
+                    <div class="contact-form">
+                        <form>
+                            <div class="mb-3">
+                                <label class="form-label">Your Name</label>
+                                <input type="text" class="form-control" placeholder="Enter your name">
+                            </div>
 
-    <!-- Travel start -->
-    <div class="Travel">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 mb-4 mb-md-0">
-                    <img src="./image/bannerTwo.jpg" alt="About Travel Agency" class="img-fluid travel-img">
+                            <div class="mb-3">
+                                <label class="form-label">Email Address</label>
+                                <input type="email" class="form-control" placeholder="Enter your email">
+                            </div>
+
+                            <div class="mb-3">
+                                <label class="form-label">Phone Number</label>
+                                <input type="text" class="form-control" placeholder="Enter your phone number">
+                            </div>
+
+                            <div class="mb-3">
+                                <label class="form-label">Message</label>
+                                <textarea class="form-control" rows="4" placeholder="Write your message"></textarea>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary">
+                                Send Message
+                            </button>
+                        </form>
+                    </div>
                 </div>
                 <div class="col-md-6">
-                    <h2 class="section-title">About Our Travel Agency</h2>
-                    <p class="section-subtitle">
-                        Your trusted partner for unforgettable journeys
-                    </p>
-                    <p>
-                        Our travel agency is dedicated to providing the best travel
-                        experiences across the globe. From luxury holidays to adventure
-                        tours, we carefully design packages that suit every traveler’s
-                        needs.
-                    </p>
-                    <p>
-                        With experienced tour guides, reliable services, and a passion
-                        for travel, we ensure comfort, safety, and memorable moments
-                        on every trip.
-                    </p>
-                    <a href="#" class="btn btn-primary mt-2">Learn More</a>
+                    <div class="contact-info">
+                        <h5>Contact Information</h5>
+                        <p><strong>Name:</strong> Travel Agency</p>
+                        <p><strong>Address:</strong> Dhaka, Bangladesh</p>
+                        <p><strong>Email:</strong> info@travel.com</p>
+                        <p><strong>Phone:</strong> +880 1234 567890</p>
+
+                        <p class="mt-3">
+                            Feel free to contact us for any travel-related queries,
+                            package details, or custom tour plans.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Travel end -->
+    <!-- contact form end -->
 
     <!-- footer start -->
     <footer id="footer">
