--- a/Faq.html
+++ b/Faq.html
@@ -42,84 +42,7 @@
         </div>
     </nav>
     <!-- navbar end -->
-
-    <!-- Team guide start -->
-    <div class="Team">
-        <div class="container">
-            <div class="row mb-4">
-                <div class="col text-center">
-                    <h2 class="section-title">Our Tour Guides</h2>
-                    <p class="section-subtitle">Meet our experienced and friendly guides</p>
-                </div>
-            </div>
-
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="team-card text-center">
-                        <img src="./image/team1.jpeg" alt="Guide">
-                        <div class="team-content">
-                            <h5>Elon Musk</h5>
-                            <p class="role">Senior Tour Guide</p>
-                            <p>10+ years of experience in international tours.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-card text-center">
-                        <img src="./image/team2.jpg" alt="Guide">
-                        <div class="team-content">
-                            <h5>mark zuckerberg</h5>
-                            <p class="role">Travel Expert</p>
-                            <p>Specialist in luxury and family travel planning.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-card text-center">
-                        <img src="./image/team3.jpg" alt="Guide">
-                        <div class="team-content">
-                            <h5>bill gates</h5>
-                            <p class="role">Adventure Guide</p>
-                            <p>Expert in mountain, hiking, and adventure tours.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Team guide end -->
-
-    <!-- Travel start -->
-    <div class="Travel">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 mb-4 mb-md-0">
-                    <img src="./image/bannerTwo.jpg" alt="About Travel Agency" class="img-fluid travel-img">
-                </div>
-                <div class="col-md-6">
-                    <h2 class="section-title">About Our Travel Agency</h2>
-                    <p class="section-subtitle">
-                        Your trusted partner for unforgettable journeys
-                    </p>
-                    <p>
-                        Our travel agency is dedicated to providing the best travel
-                        experiences across the globe. From luxury holidays to adventure
-                        tours, we carefully design packages that suit every traveler’s
-                        needs.
-                    </p>
-                    <p>
-                        With experienced tour guides, reliable services, and a passion
-                        for travel, we ensure comfort, safety, and memorable moments
-                        on every trip.
-                    </p>
-                    <a href="#" class="btn btn-primary mt-2">Learn More</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Travel end -->
-
+     <h1>dsf</h1>
     <!-- footer start -->
     <footer id="footer">
         <div class="container">
@@ -160,8 +83,6 @@
         </div>
     </footer>
     <!-- footer end -->
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
