--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link active" aria-current="page" href="About.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                        <a class="nav-link active" aria-current="page" href="Contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Faq</a>
