--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
 <body>
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -32,7 +32,7 @@
                         <a class="nav-link active" aria-current="page" href="Contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Faq</a>
+                        <a class="nav-link active" aria-current="page" href="Faq.html">Faq</a>
                     </li>
                 </ul>
                 <div class="">
