--- a/index.html
+++ b/index.html
@@ -206,6 +206,32 @@
         </div>
     </div>
     <!-- traveler end -->
+    <div class="container mt-3">
+        <div id="live-clock" class="alert alert-info text-center" style="font-weight: bold; font-size: 1.2rem;">
+            Loading date and time...
+        </div>
+    </div>
+
+    <div id="statistics" class="py-5 bg-light">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <h2 class="counter" data-target="1500">0</h2>
+                    <p>Happy Travelers</p>
+                </div>
+                <div class="col-md-4">
+                    <h2 class="counter" data-target="500">0</h2>
+                    <p>Tours Completed</p>
+                </div>
+                <div class="col-md-4">
+                    <h2 class="counter" data-target="100">0</h2>
+                    <p>Destinations</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="main.js"></script>
     <!-- footer start -->
     <footer id="footer">
         <div class="container">
@@ -251,6 +277,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
